--- a/e4/e4.md
+++ b/e4/e4.md
@@ -16,4 +16,4 @@ mvn clean verify sonar:sonar \
   -Dsonar.host.url=http://localhost:9000 \
   -Dsonar.login=sqp_32f035e921f80df8271bef88d76b0d23e0c0a713
 ```
-6. Posteriormente se abre en Sonaqube los detalles de mi proyecto y he superado las pruebas o no.
+6. Posteriormente se abre en Sonaqube los detalles de mi proyecto y si he superado las pruebas o no.
